<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/fond_ecran">
    <Button
        android:layout_above="@+id/editer"
        style="@style/stylebutton"
        android:text="@string/btn1"
        android:id="@+id/ajouter"
        android:onClick="afficherfrmajouter"
        />

    <Button
        style="@style/stylebutton"
        android:text="@string/btn2"
        android:layout_centerVertical="true" android:id="@+id/editer"
        android:onClick="aficherfrmEditer"/>

    <Button
        android:layout_below="@+id/editer"
        style="@style/stylebutton"
        android:text="@string/btn3"
        android:id="@+id/lister"
        android:onClick="afficherfrmlister"

        />


</RelativeLayout>